# NoteFlow

./: .gitignore  Cargo.toml  architecture-graph.html  build-debug.bat  build.bat  build.rs  slint没有windows标题解决移动的方案.txt
Releases/: Releases.rar
src/: alarm_alert.rs  alarm_audio.rs  app.rs  handlers.rs  main.rs  storage.rs  timers.rs  tray.rs  ui_sync.rs  window.rs
ui/: alarm-alert-window.slint  alarm-page.slint  app-window.slint  notes-page.slint  widgets.slint
