[package]
name = "sticky-note"
version = "0.1.0"
edition = "2021"
description = "Windows桌面便签 - 玻璃拟态风格，支持便签管理与闹钟提醒"

[dependencies]
slint = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
native-dialog = "0.7"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
slint-build = "1"
image = "0.25"
winresource = "0.1"
